@@ -14,7 +14,7 @@
 #'   
 #' @param f Deprecated. Use \code{group} instead.
 #' 
-#' @param update_rowTree Deprecated. Use \code{update.tree } instead.
+#' @param update_rowTree Deprecated. Use \code{update.tree} instead.
 #'   
 #' @param altexp \code{Character vector}. Specify the alternative experiments
 #'   to be unsplit. (Default: \code{names(altExps(x))})
@@ -268,7 +268,7 @@ setMethod("splitOn", signature = c(x = "SingleCellExperiment"),
 #' @export
 setMethod("splitOn", signature = c(x = "TreeSummarizedExperiment"),
     function(x, group = f, f = NULL, update.tree = update_rowTree,
-            update_rowTree = FALSE, ...){
+            update_rowTree = TRUE, ...){
         # Input check
         # Check update.tree
         if( !.is_a_bool(update.tree) ){
@@ -444,7 +444,7 @@ setMethod("splitOn", signature = c(x = "TreeSummarizedExperiment"),
 #' @importFrom SingleCellExperiment altExpNames altExp altExps
 #' @export
 setMethod("unsplitOn", signature = c(x = "list"),
-    function(x, update.tree = update_rowTree, update_rowTree = FALSE, ...){
+    function(x, update.tree = update_rowTree, update_rowTree = TRUE, ...){
         # Unsplit list and create SCE, SE, or TreeSE from it
         .list_unsplit_on(x, update.tree, ...)
     }
@@ -453,7 +453,7 @@ setMethod("unsplitOn", signature = c(x = "list"),
 #' @importFrom SingleCellExperiment altExpNames altExp altExps
 #' @export
 setMethod("unsplitOn", signature = c(x = "SimpleList"),
-    function(x, update.tree = update_rowTree, update_rowTree = FALSE, ...){
+    function(x, update.tree = update_rowTree, update_rowTree = TRUE, ...){
         unsplitOn(as.list(x), update.tree, ...)
     }
 )
